# got

./: README.md  got  net.py  pyproject.toml  requirements.txt
src/git-ai/: __main__.py  cli.py
src/git-ai/openai/: client.py
src/got/: __main__.py  cli.py
src/got/backend/: client.py  local.py  openai.py
